--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,11 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "paths": {
+      "project-components-rdh": [
+        "dist/project-components-rdh"
+      ]
+    },
     "target": "es2020",
     "module": "es2020",
     "lib": [
