--- a/projects/project-components-rdh/package.json
+++ b/projects/project-components-rdh/package.json
@@ -3,7 +3,10 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^14.2.0",
-    "@angular/core": "^14.2.0"
+    "@angular/core": "^14.2.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.1",
+    "jquery": "^3.7.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
