--- a/angular.json
+++ b/angular.json
@@ -101,6 +101,7 @@
               "projects/test-library/src/assets"
             ],
             "styles": [
+              "projects/test-library/src/theme.scss",
               "projects/test-library/src/styles.scss"
             ],
             "scripts": []
