--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.0-next.0",
+    "@angular/animations": "^14.3.0",
+    "@angular/cdk": "^13.3.9",
     "@angular/common": "^14.0.0-next.0",
     "@angular/compiler": "^14.0.0-next.0",
     "@angular/core": "^14.0.0-next.0",
-    "@angular/forms": "^14.0.0-next.0",
+    "@angular/forms": "^14.3.0",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "^14.0.0-next.0",
     "@angular/platform-browser-dynamic": "^14.0.0-next.0",
     "@angular/router": "^14.0.0-next.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.1",
+    "date-fns": "^2.30.0",
     "jquery": "^3.7.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
