--- a/projects/project-components-rdh/package.json
+++ b/projects/project-components-rdh/package.json
@@ -2,13 +2,21 @@
   "name": "project-components-rdh",
   "version": "0.0.1",
   "peerDependencies": {
+    "@angular/animations": "^14.3.0",
+    "@angular/cdk": "^13.0.0",
     "@angular/common": "^14.2.0",
     "@angular/core": "^14.2.0",
+    "@angular/material": "^13.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.1",
-    "jquery": "^3.7.0"
+    "date-fns": "^2.30.0",
+    "jquery": "^3.7.0",
+    "rxjs": "~7.5.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
+  },
+  "devDependencies": {
+    "@types/dateformat": "^5.0.0"
   }
 }
