--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "^14.0.0-next.0",
     "@angular/router": "^14.0.0-next.0",
     "@popperjs/core": "^2.11.8",
+    "angular-material-icons": "^0.7.1",
     "bootstrap": "^5.3.1",
     "date-fns": "^2.30.0",
     "jquery": "^3.7.0",
+    "react-scripts": "^5.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
