--- a/projects/project-components-rdh/package.json
+++ b/projects/project-components-rdh/package.json
@@ -8,10 +8,14 @@
     "@angular/core": "^14.2.0",
     "@angular/material": "^13.0.0",
     "@popperjs/core": "^2.11.8",
+    "angular-material-icons": "^0.7.1",
     "bootstrap": "^5.3.1",
     "date-fns": "^2.30.0",
     "jquery": "^3.7.0",
-    "rxjs": "~7.5.0"
+    "react-scripts": "^5.0.1",
+    "rxjs": "~7.5.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "dependencies": {
     "tslib": "^2.3.0"
