--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-components",
-  "version": "0.0.0",
+  "version": "0.0.3",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,7 +8,7 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "^14.3.0",
     "@angular/cdk": "^13.3.9",
